# obr-web

./: .coveragerc  .dockerignore  .env.example  .env.live.save  .eslintrc.cjs  .eslintrc.js  .gcloudignore  .gitignore  .gitlab-ci.yml  .prospector.yaml  .stylelintrc.cjs  .stylelintrc.js  CHANGELOG.md  LICENSE  Makefile  README.adoc  README.md  cloudbuild.yaml  docker-compose.override.yml  docker-compose.yml  manage.py  obr-cli  package.json  pyproject.toml  pytest.ini  report.html  schema.yaml  temp-sa-kej.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vue.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yaml  ci.yaml  container-image.yaml  deploy.yaml  gcp.yaml  mirror.yaml  mirror.yml
__full_workflows/: ci.yaml  mirror.yaml
compose/cdn-cookie-validator/: Dockerfile  main.py
compose/core/: Dockerfile  Dockerfile.without-ui  sync-schedule
compose/image-resizer/: Dockerfile
compose/mailhog/: Dockerfile
compose/media-encoder/: Dockerfile  main.py
compose/news-stream/: Dockerfile
compose/nginx/: Dockerfile  default.conf.template  nginx.conf
compose/sse-publisher/: Dockerfile
config/: asgi.py  urls.py  urls_api.py  wsgi.py
config/settings/: base.py  dev_logging.py  development.py  gcp_logging.py  live.py  vm.py
content/legal/: dpp-en.md
content/pages/: about.md  changelog.md  contact.md  developers.md  donate.md  reception.md
core/: asgi.py  schema.py  urls.py  urls_api.py  wsgi.py
core/account/: admin.py  forms.py  migrate.py  models.py  signals.py  tests.py  views.py
core/api_extra/: drf_spectacular_postprocessors.py  permissions.py  schema.py  serializers.py
core/app_bridge/: apps.py  views.py
core/base/: apps.py  context_processors.py  version.py
core/broadcast/: admin.py  apps.py  models.py  signals.py  translation.py  utils.py
core/catalog/: index.py  schema.py  translation.py  urls.py  utils.py  views.py
core/client_mode/: README.md  context_processors.py  middleware.py
core/cms/: admin.py  models.py  page.py  static_page.py  translation.py
core/dev/: apps.py  schedule.py  urls.py  views.py
core/electronic_mail/: message.py  urls.py  views.py
core/faq/: admin.py  models.py  translation.py
core/geolocation/: context_processors.py  middleware.py
core/identifier/: admin.py  mixins.py  models.py
core/image/: admin.py  colors.py  extract.py  models.py  resizer.py  utils.py
core/manifest/: urls.py  views.py
core/newsletter/: admin.py  apps.py  mailchimp.py  models.py  translation.py
core/playout/: apps.py
core/pub_sub_bridge/: apps.py
core/rating/: __init__.py  admin.py  mixins.py  models.py  queries.py  signals.py
core/redirect/: apps.py
core/robots/: urls.py
core/search/: global_search.py
core/settings/: base.py  build.py  default.py  dev_logging.py  development.py  env.py  example_local_development.py  gcp.py  gcp_logging.py  live.py  sync.py  test.py
core/share/: meta.py
core/slack/: bot.py  signals.py
core/spa/: urls.py  views.py
core/stats/: admin.py  archive.py  ingest.py  models.py  settings.py
core/subscription/: admin.py  models.py  signals.py  urls_voucher.py  views.py
core/sync/: __init__.py  admin.py  api_client.py  apps.py  signals.py  update.py  utils.py
core/tagging/: admin.py  managers.py  models.py  utils.py
core/templates/: index.html
core/user_identity/: middleware.py  utils.py
core/usersnap/: apps.py
core/vite/: context_processors.py  middleware.py
core/well_known/: apps.py  views.py
dev/http-echo-server/: Dockerfile  index.html  server.go
devsupport/: event-cleanup.py
devsupport/news/: .gitignore  README.md  create-mock-audio.sh  news.liq  serve-hls.py
devsupport/playout/: NOTES.md
docker/: Dockerfile  Dockerfile.multi-stage  README.md  docker-compose.yml
docker/compose/: dev.yml
docker/core/: Dockerfile
docker/hooks/: __disabled__build
docker/image-resizer/: Dockerfile
docker/media-encoder/: Dockerfile  main.py
docker/nginx/: Dockerfile  default.conf.template  nginx.conf
docs/: antora.yml  development.md  todo.md
docs/api/: account.md  index.md  media.md
docs/audio/: cue-and-fade.md  index.md
docs/cdn/: images.md  media.md
docs/ci/: github.md
docs/development/: docker-compose.md  index.md  live-data.md
docs/diagrams/: .$overview.drawio.svg.bkp  .$overview.drawio.svg.dtmp
docs/gcp/: 02-load-balancer.md  03-http-image-resizer.md  04-media-encoding.md  05-media-delivery.md  06-scheduler-pub-sub.md  07-external-services.md  08-service-accounts.md  08-social-auth-redirector.md  08-vpc-egress.md  cdn.key  cors.json  http-image-resizer.md  setup.md
docs/media-cdn/: cdn.md
docs/notes/: archive-airplays-and-emissions.md  player-state-and-store.md  sync-schedule.md  task-scheduler.md
docs/stats/: icecast-logs.md
functions/http-image-resizer/: .gcloudignore  README.md  function.go  go.mod  go.sum  serve.REMOVED.git-id  server.REMOVED.git-id
functions/http-slide-renderer/: README.md  eslint.config.js  package.json  tsconfig.json
functions/icecast-updater/: README.md  main.py
functions/metadata-updater/: README.md  api_client.py  main.py  requirements.txt
functions/on-air-updater/: .gcloudignore  README.md  api_client.py  main.py  pub-sub-subscriber.py  requirements.txt
functions/on-air-updater-old/: api_client.py  main.py  pub-sub-subscriber.py
functions/pub-sub-bridge/: README.md  main.py
gcp/: build-migrate-deploy.yaml  migrate-deploy.yaml
gcp/docs/: cors.json  (+3 more)
obr_ui/: App.vue  eventBus.ts  init.ts  main.ts
ops/: gcrgc.sh
patches/: @openreplay+tracker-assist+3.5.11.patch  @openreplay+tracker-assist+3.6.3.patch
ref-webpack/: README.md  package.json  tsconfig.json
services/news-ftp/: README.md  config.py  main.py  pyproject.toml
services/news-ftp/ansible/: news-ftp.yml
services/sse-publisher/: README.md  __main.py  config.py  main.go  main.py  pyproject.toml  sse-publisher.service
services/sse-publisher/deploy/: sse-publisher.service
services/sse-publisher/dev/: post-news.http
src/: App.vue  eventBus.ts  main.js  main.ts  settings.js  settings.ts  types.ts
(+1783 files in other folders)
