[tool.poetry]
name = "openbroadcast.ch"
version = "0.0.57"
description = "openbroadcast.ch - next"
authors = ["Jonas Ohrstrom <jonas.ohrstrom@digris.ch>"]
license = "MIT"

packages = [{include="core", from="."}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
Django = "^4.1.3"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.9"
google-cloud-secret-manager = "^2.11.1"
google-auth = "^2.6.6"
django-environ = "^0.9.0"
django-storages = {extras = ["google"], version = "^1.11.1"}
djangorestframework = "^3.14.0"
coreapi = "^2.3.3"
django-settings-export = "^1.2.1"
django-filter = "^22.1"
Pillow = "^9.0.1"
# django-admin-sortable2 = "^1.0.2"
django-cleanup = "^6.0.0"
mondrian = "^0.8.1"
drf-flex-fields = "^1.0.0"
django-request-logging = "^0.7.3"
google-cloud-logging = "^3.1.2"
social-auth-app-django = "^5"
Hypercorn = "^0.12"
click = "^8.0.0"
stripe = "^3.2.0"
colorthief = "^0.2.1"
django-taggit = "^3.0.0"
drf-spectacular = "^0.24.1"
filetype = "^1.0.7"
djangorestframework-camel-case = "^1.2.0"
sentry-sdk = "^1.3.1"
Markdown = "^3.3.4"
setoptconf = "^0.3.0"
whitenoise = "^6.2.0"
bleach = "^5.0.0"
django-countries = "^7.2.1"
#google-cloud-bigquery = "^3.3.0"  # NOTE: currently no support for python 3.11
#grpcio = "<1.52.0"
django-qsstats-magic = "^1.1.0"
pyembed-markdown = "^1.1.0"
slack-sdk = "^3.17.0"
google-api-core = "^2.8.1"
django-modeltranslation = "^0.18.2"
djangorestframework-simplejwt = "^5.2.0"
sendgrid = "^6.9.7"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
django-extensions = "*"
frosted = "*"
pre-commit = "*"
pygtail = "*"
pylint = "*"
pylint-django = "*"
werkzeug = "*"
pytest-django = "*"
pytest-cov = "*"
django-querycount = "*"
Faker = "^7.0.1"
django-stubs = "^1.8.0"
djangorestframework-stubs = "^1.4.0"
freezegun = "^1.1.0"
mixer = "^7.2.0"
selenium = "^4.0.0"
libfaketime = "^2.0.0"
vulture = "^2.3"
pyupgrade = "^2.29.1"
black = "22.3.0"
python-semantic-release = "^7.27.0"
prospector = "^1.7.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
force_single_line = false
default_section = "THIRDPARTY"
known_first_party = "core"  # change it for the name of your django project
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.semantic_release]
version_variable = [
    "core/__init__.py:__version__",
    "pyproject.toml:^version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds core.settings.test"  # term:skip-covered / term-missing
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as slow (deselect with '-m \"not integration\"')",
    "e2e: marks tests as slow (deselect with '-m \"not e2e\"')",
]
filterwarnings = [
    "ignore:::standard_library",
    "ignore:::cms",
    "ignore:::html5lib",
    "ignore:::djangocms_attributes_field",
    "ignore::django.utils.deprecation.RemovedInDjango50Warning:django",
    "ignore::DeprecationWarning:future",
    "ignore::DeprecationWarning:google",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[mypy.plugins.django-stubs]
django_settings_module = "core.settings.test"
