[project]
name = "sse-publisher"
version = "0.0.1"
description = "SSE Publisher. Publishes received payload to all connected clients."
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "pydantic-settings>=2.7.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "ruff>=0.9.4",
]
